优化 emby  功能
