# crates/api/src/openapi/doc.rs
@@ -20,6 +20,9 @@ use utoipa::OpenApi;
         crate::routes::emby::playback_start_handler,
         crate::routes::emby::playback_progress_handler,
         crate::routes::emby::playback_stopped_handler,
+        crate::routes::emby::subtitle_download_handler,
+        crate::routes::emby::subtitle_proxy_handler,
+        crate::routes::emby::subtitle_search_handler,
         crate::routes::jobs::generate_defaults_handler,
         crate::routes::jobs::generate_handler,
         crate::routes::jobs::generate_bulk_handler,
@@ -66,9 +69,17 @@ use utoipa::OpenApi;
         ma_service::emby::EmbyPlaybackMethod,
         ma_service::emby::EmbyPlaybackProgressReq,
         ma_service::emby::EmbyPlaybackSyncRes,
+        ma_service::emby::EmbyPerson,
+        ma_service::emby::EmbyRemoteSubtitle,
         ma_service::emby::EmbySectionsQuery,
         ma_service::emby::EmbySectionsRes,
         ma_service::emby::EmbyStreamQuery,
+        ma_service::emby::EmbySubtitleDownloadReq,
+        ma_service::emby::EmbySubtitleDownloadRes,
+        ma_service::emby::EmbySubtitleSearchQuery,
+        ma_service::emby::EmbySubtitleSearchRes,
+        ma_service::emby::EmbySubtitleStreamQuery,
+        ma_service::emby::EmbySubtitleTrack,
         ma_service::SubtitleGenerateConfig,
         ma_service::SubtitleTranslateConfig,
         ma_service::VadConfig,
